--- a/Javascript/Dom/index.html
+++ b/Javascript/Dom/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM</title>
-    <script src="dom.js"></script>
     <style>
         .bg-black{
             background-color: Black;
@@ -12,10 +11,30 @@
         }
     </style>
 </head>
-<body class="bg-black">
-    <p id="title">chinmaya kumar das</p>
-    <p id="title">tanj kumar </p>
-    <p id="title">chinmaya  sahpp</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos cumque pariatur ipsa dolorem, officia voluptatem exercitationem necessitatibus omnis debitis quod natus magni quidem quae voluptates aliquid repellat praesentium, nihil mollitia!</p>
+<body style="background-color:#212121; color:#fff;">
+        <div class="parent">
+            <div class="day">Monday</div>
+            <div class="day">tuesday</div>
+            <div class="day">Wednesday</div>
+            <div class="day">Thursday</div>
+        </div>
 </body>
+<script >
+    const parent=document.querySelector('.parent')
+    console.log(parent)
+    console.log(parent.children)
+    console.log(parent.children[2].innerHTML)
+
+    for(let i=0;i<parent.children.length;i++){
+        console.log(parent.children[i].innerHTML)
+    }
+    parent.children[1].style.color="orange"
+console.log(parent.firstElementChild);
+console.log(parent.lastElementChild);
+
+const dayone=document.querySelector('.day')
+console.log(dayone.parentElement);
+console.log(dayone.nextElementSibling);
+</script>
+
 </html>
