--- a/JS_Project/CalculatorApp/index.html
+++ b/JS_Project/CalculatorApp/index.html
@@ -1,127 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<style>
-    *{
-     margin: 0;
-     padding: 0;
-     box-sizing: border-box;
+  </head>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
     }
-    body{
-        width: 100%;
-        height: 100vh;
-        display: grid;
-        place-items: center;
-        background: linear-gradient(45deg, #0a0a0a, #3a4452);
+    body {
+      width: 100%;
+      height: 100vh;
+      display: grid;
+      place-items: center;
+      background: linear-gradient(45deg, #0a0a0a, #3a4452);
     }
-    .container{
-        border: 1px solid #717377;
-        padding: 20px;
-        border-radius: 15px;
-        background: transparent;
-        box-shadow: 0px 3px 15px rgba(113, 115, 119, 0.5);
+    .container {
+      border: 1px solid #717377;
+      padding: 20px;
+      border-radius: 15px;
+      background: transparent;
+      box-shadow: 0px 3px 15px rgba(113, 115, 119, 0.5);
     }
-    input{
-        width: 320px;
-        color: #ffffff;
-        border: none;
-        padding: 24px;
-        margin: 10px;
-        background: transparent;
-        text-align: right;
-        cursor: pointer;
-        font-size: 40px;
-        box-shadow: 0px 3px 15px rgba(84, 84, 84, 0.1);
+    input {
+      width: 320px;
+      color: #ffffff;
+      border: none;
+      padding: 24px;
+      margin: 10px;
+      background: transparent;
+      text-align: right;
+      cursor: pointer;
+      font-size: 40px;
+      box-shadow: 0px 3px 15px rgba(84, 84, 84, 0.1);
     }
-    input::placeholder{
-        color: #ffffff;
+    input::placeholder {
+      color: #ffffff;
     }
-    button{
-        border: none;
-        width: 60px;
-        height: 60px;
-        border-radius: 50%;
-        margin: 10px;
-        cursor: pointer;
-        font-size: 20px;
-        box-shadow: -8px -8px 15px rgba(255, 255, 255, 0.3);
-        background: transparent;
-        color: #ffffff;
+    button {
+      border: none;
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      margin: 10px;
+      cursor: pointer;
+      font-size: 20px;
+      box-shadow: -8px -8px 15px rgba(255, 255, 255, 0.3);
+      background: transparent;
+      color: #ffffff;
     }
-    button:hover{
-        box-shadow: inset 2px 2px 5px #717377, inset -3px -3px 7px #ffffff;
+    button:hover {
+      box-shadow: inset 2px 2px 5px #717377, inset -3px -3px 7px #ffffff;
     }
-    .operators{
-        color: #6dee0a;
+    .operators {
+      color: #6dee0a;
     }
-    .eq{
-    background-color: #fb7c14;
+    .eq {
+      background-color: #fb7c14;
     }
-</style>
-<body>
-   <div class="container">
-    <input type="text" placeholder="0" id="result">
+  </style>
+  <body>
+    <div class="container">
+      <input type="text" placeholder="0" id="result"  disabled/>
 
-    <div>
+      <div>
         <button class="operators" onclick="clearResult()">AC</button>
         <button class="operators" onclick="deleteResult()">DEL</button>
         <button class="operators" onclick="insertValue('%')">%</button>
         <button class="operators" onclick="insertValue('/')">/</button>
-    </div>
+      </div>
 
-    <div>
+      <div>
         <button onclick="insertValue('7')">7</button>
         <button onclick="insertValue('8')">8</button>
         <button onclick="insertValue('9')">9</button>
         <button class="operators" onclick="insertValue('*')">*</button>
-    </div>
-    <div>
+      </div>
+      <div>
         <button onclick="insertValue('4')">4</button>
         <button onclick="insertValue('5')">5</button>
         <button onclick="insertValue('6')">6</button>
         <button class="operators" onclick="insertValue('-')">-</button>
-    </div>
-    <div>
+      </div>
+      <div>
         <button onclick="insertValue('1')">1</button>
         <button onclick="insertValue('2')">2</button>
         <button onclick="insertValue('3')">3</button>
         <button class="operators" onclick="insertValue('+')">+</button>
-    </div>
-    <div>
+      </div>
+      <div>
         <button onclick="insertValue('00')">00</button>
         <button onclick="insertValue('0')">0</button>
         <button onclick="insertValue('.')">.</button>
-        <button class="eq" onclick="calculate()">=</button>
+        <button class="eq" onclick="calculate()"> = </button>
+      </div>
     </div>
-   </div>
 
-
-   
-   <script>
-    function insertValue(value){
+    <script>
+      function insertValue(value) {
         result.value += value;
-    }
-    function clearResult(){
-        result.value = '';
-    }
+      }
+      function clearResult() {
+        result.value = "";
+      }
 
-    function deleteResult(){
-        result.value = result.value.slice(0, -2);
-    }
+      function deleteResult() {
+        result.value = result.value.slice(0, -1);
+      }
 
-    function calculate(){
-        try{
-            result.value = eval(result.value);
-
-        } catch (error){
-            result.value = 'Error';
+      function calculate() {
+        try {
+          result.value = eval(result.value);
+        } catch (error) {
+          result.value = "Error";
         }
-    }
-   </script>
-</body>
+      }
+    </script>
+  </body>
 </html>
